# webaio

./: .coveragerc  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  README.rst  requirements.txt  run_tests_for_docker.sh  setup.cfg  setup.py
.circleci/: config.yml
webaio/: decorators.py  exceptions.py  middlewares.py  routers.py  viewsets.py
webaio/scripts/: webaio-create-app.py  webaio-create-project.py
webaio/tests/: test_patterns.py  test_routers.py
