[metadata]
name = webaio
version = attr: webaio.__version__
description = Web framework to develop async webapps.
long_description = file: README.md
license = BSD-3-Clause
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: webaio
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.7
packages = find:
scripts = 
    webaio/scripts/webaio-create-project.py
    webaio/scripts/webaio-create-app.py
include_package_data = true
zip_safe = false



[flake8]
exclude = build,.git,.tox,./tests/.env
ignore = W504,W601
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = webaio
line_length = 79
multi_line_output = 5